examples/mailgate-app/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailgate-server
  namespace: mailgate
spec:
  selector:
    app: mailgate-server
  ports:
    - name: http
      port: 31101
      targetPort: http
    - name: grpc
      port: 31102
      targetPort: grpc
    - name: debug
      port: 31103
      targetPort: debug
