examples/mailgate-app/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailgate-frontend
  namespace: mailgate
spec:
  selector:
    app: mailgate-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
