examples/mailgate-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailgate
  namespace: mailgate
spec:
  ingressClassName: traefik
  rules:
    - host: mailgate.rpi5b.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailgate-frontend
                port:
                  number: 80
